--- a/src/MoneyManagement/ios/Podfile
+++ b/src/MoneyManagement/ios/Podfile
@@ -19,6 +19,8 @@ target 'MoneyManagement' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'MoneyManagementTests' do
     inherit! :complete
     # Pods for testing
