--- a/src/MoneyManagement/package.json
+++ b/src/MoneyManagement/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "firebase": "^9.6.11",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
